--- a/esg_main_activity.html
+++ b/esg_main_activity.html
@@ -142,7 +142,239 @@
 <!--//visual 영역-->
 <!--본문영역-->
 <div class="content">
-    <div class="cont">
+    <div class="esg-act-wrap">
+        <div class="top-area">
+            <p class="desc">지속 가능한 경영을 위해<br>
+                애경그룹이 진행하고 있는<br class="mo">
+                주요 ESG 활동을 소개합니다.</p>
+            <ul class="esg-act-tab">
+                <li class="env active">
+                    <a href="javascript:;"><em><span>Environmental</span><span>환경</span></em></a>
+                </li>
+                <li class="soc">
+                    <a href="/esg_main_activity_soc.html"><em><span>Social</span><span>사회</span></em></a>
+                </li>
+                <li class="gov">
+                    <a href="/esg_main_activity_gov.html"><em><span>Governance</span><span>지배구조</span></em></a>
+                </li>
+            </ul>
+        </div>
+        <div class="cont-wrap">
+            <section class="env01">
+                <div class="inner">
+                    <p class="cate"><span>Environmental</span><span>01</span></p>
+                    <div class="cont01">
+                        <p class="tit">ACE(Aekyung Chemical Eco)
+                            vision 3050 친환경 비전 선포</p>
+                        <p class="desc">
+                            애경케미칼은 2030년까지 친환경 원료 사용과
+                            제품 매출 비중을 50%로 높이고 탄소배출량은
+                            50%로 감축하는 것을 목표로 친환경 비전을
+                            선포하고 실천 과제 실행 중에 있습니다.
+                            바이오매스, 재활용 원료 및 소싱을 확대하고,
+                            에너지 절감 및 탄소배출 저감 시스템을 도입할
+                            계획입니다. </p>
+                        <div class="img-wrap">
+                            <img src="./images/img_env01.png" alt="">
+                        </div>
+                        <p class="desc">
+                            또한 바이오에너지, 친환경 제품 비중을 확대해
+                            친환경 글로벌 기업으로의 퀀텀 점프를 목표로
+                            하고 있습니다. 한편 사내에서는 ‘감.탄.사
+                            캠페인’을 진행하고 있습니다.<br><br>
+                            감탄사란 감(減:감하다), 탄(炭:탄소),
+                            사(社:애경케미칼), 즉 ‘탄소를 줄이는 애경케미칼
+                            사람들’이라는 의미입니다. 환경을 보호하는 작은
+                            실천을 통해 불필요한 에너지 소비와 탄소 발생을
+                            줄일 수 있는 지속가능한 친환경 활동으로
+                            회사에서 실천할 수 있는 4가지와 생활 속에서
+                            실천할 수 있는 4가지 활동인 ▲점심시간 조명과
+                            냉난방 끄기 ▲퇴근 시 전기 플러그 뽑기
+                            ▲회의실 이용 후 소등, 전원장치 끄기 ▲계단
+                            이용하기 ▲대중교통 이용하기 ▲종이 사용량
+                            줄이기 ▲개인컵·텀블러 사용하기 ▲손수건
+                            사용하기 등을 전파하고 있습니다.</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="inner">
+                    <p class="cate"><span>Environmental</span><span>02</span></p>
+                    <p class="tit">애경그룹 강원도 산불 피해 복구
+                        지원 사업으로 ‘애경숲’ 조성</p>
+                    <div class="img-wrap">
+                        <img src="./images/img_env02.png" alt="">
+                    </div>
+                    <p class="desc">
+                        AK홀딩스, AK플라자, 애경케미칼은 강원 산불
+                        피해 지역에 묘목을 기부하며 AK플라자가
+                        2018년부터 진행해온 ‘리턴 투 그린(Return to
+                        Green)’의 일환인 ‘애경숲’을 조성하기로
+                        했습니다.<br><br>
+                        애경그룹이 기부할 묘목을 통해 강원 지역에
+                        조성될 숲은 5천 평(1만6529m2)으로 이는
+                        축구장 2개 넓이와 맞먹는 규모이며, AK플라자가
+                        지역 상생 활동을 위해 조성해온 ‘애경숲’
+                        중에서는 최대 규모입니다. 이를 통해 AK플라자는
+                        올해까지 강원 및 수원, 분당 지역에 총 1만 평
+                        (3만3058m2) 규모의 ‘애경숲’을 조성하게
+                        됩니다.<br><br>
+                        특히 AK플라자는 산불로 인해 어려움을 겪고
+                        있는 강원지역 대표 백화점으로서 지역에 보탬이
+                        되는 상생활동을 지속 확대하며 ESG경영 활동을
+                        실천하고 있습니다.</p>
+                </div>
+            </section>
+            <section class="env03">
+                <div class="inner">
+                    <p class="cate"><span>Environmental</span><span>03</span></p>
+                    <p class="tit">조종사 탄소 줄이기 ‘북극곰 살리기
+                        프로젝트’</p>
+                    <div class="img-wrap">
+                        <img src="./images/img_env03_01.png" alt="">
+                        <img src="./images/img_env03_02.png" alt="">
+                    </div>
+                    <p class="desc">
+                        제주항공의 ‘북극곰 살리기 프로젝트’는
+                        조종사들이 연료 효율 개선을 통한 온실가스
+                        배출을 줄이자는 데 뜻을 모아 2017년부터
+                        진행하고 있는 캠페인입니다.
+                        조종사들은 ▲활주로에 진입할 때 정지하지 않고
+                        이미 확보한 동력을 활용하는 ‘활주이륙’
+                        ▲활주로의 끝까지 가지 않고 중간에 진입해
+                        이륙하는 ‘중간이륙’ ▲착륙 후 지상 이동 시 2개
+                        엔진 중 1개만 사용 ▲연료효율 최적화할 수 있는
+                        최적 고도 비행 등 다양한 방법을 통해 탄소 배출
+                        줄이기에 나서고 있습니다.
+                    </p>
+                </div>
+            </section>
+            <section>
+                <div class="inner">
+                    <p class="cate"><span>Environmental</span><span>04</span></p>
+                    <p class="tit">친환경 종이컵, 식기 등 사용, 유니폼
+                        업사이클링 상품 제작</p>
+                    <div class="img-wrap">
+                        <img src="./images/img_env04.png" alt="">
+                    </div>
+                    <p class="desc">
+                        제주항공은 2019년 1월부터 환경보호의
+                        중요성을 탑승객과 함께 나눈다는 취지에서
+                        기내에서 사용하는 일반 빨대와 종이컵, 비닐
+                        등을 친환경 재질로 교체하는 등 환경을 보호하는
+                        노력을 지속하고 있습니다.<br><br>
+                        또한 2022년 1월엔 국내 최초로 폐기처분
+                        유니폼을 재활용한 상품인 ‘리프레시 백’
+                        시리즈를 100개 한정으로 제작해 제주항공
+                        여행전문 온라인 쇼핑몰 ‘제이샵’에서
+                        판매했으며 구명조끼, 정비우의 등 폐기자원을
+                        활용한 다양한 상품개발을 이어 나갈 계획입니다.
+                    </p>
+                </div>
+            </section>
+            <section>
+                <div class="inner">
+                    <p class="cate"><span>Environmental</span><span>05</span></p>
+                    <p class="tit">청정 제주 위한 ‘그린트래블러’
+                        캠페인, 해안 정화활동 및 환경보전
+                        관심 유도</p>
+                    <p class="desc">
+                        제주항공은 2018년부터 제주지역 대학생들과
+                        함께 한라산 및 바다와 해변에 버려져 있는
+                        쓰레기를 주워 ‘청정제주’를 만들기 위한
+                        자발적인 사회공헌 활동을 진행하고 있습니다.
+                        또한 제주항공의 친환경 경영 실천의지를
+                        적극적으로 알리고 친환경 활동에 활용하기 위해
+                        제주항공의 친환경 슬로건인 ‘Refresh Earth’가
+                        포함된 로고타입과 워드마크를 지난해 5월 발표해
+                        제주항공의 친환경 활동에 활용하고 있습니다.
+                        2021년 5월부터 11월까지는 제주여행을 떠나는
+                        고객들을 대상으로 제주항공에서 제작한 친환경
+                        생분해 쓰레기 봉투를 나눠주고 청정 제주를
+                        지키기 위한 친환경 여행 참여를 장려하는 ‘그린
+                        트래블러’ 캠페인도 진행했습니다.<br><br>
+                        2021년 11월에는 (사)제주바다사랑실천
+                        협의회와 제주 해안 환경 보전 사업 등을 위한
+                        업무협약을 체결해 제주항공 객실승무원들로
+                        구성된 봉사단 에코머(ECOMER)가 제주
+                        해안에서 환경정화활동을 진행하고 있으며,
+                        제주항공 이용객들도 함께 참여할 수 있는
+                        프로그램으로 확대해 운영하고 있습니다.<br><br>
+                        또한 제주환경보전에 대한 고객관심과 참여를
+                        유도하기 위해 제주 연안에서 서식하는
+                        국제보호종 ‘제주남방큰돌고래’를 모티브로
+                        제주항공의 친환경 여행캠페인 캐릭터 ‘제코
+                        (JEJU+ECO)’를 제작했으며 이를 활용해 다양한
+                        기획상품(굿즈, goods)을 제작해 판매하고
+                        있습니다. 판매 수익금의 일부는 제주환경보호
+                        활동에 사용할 예정입니다.
+                    </p>
+                </div>
+            </section>
+            <section class="env06">
+                <div class="inner">
+                    <p class="cate"><span>Environmental</span><span>06</span></p>
+                    <div class="cont01">
+                        <p class="tit">제품 안전성, 친환경, 자원의 선순환
+                            실천으로 지속가능성 위한 제품 설계</p>
+                        <p class="desc">
+                            애경산업은 플라스틱 문제의 심각성을 인지하고
+                            친환경 포장재 개발 및 플라스틱 재활용 선순환
+                            생태계 조성을 위해 노력하고 있습니다.
+                        </p>
+                        <div class="img-wrap">
+                            <img src="./images/img_env06_01.png" alt="">
+                        </div>
+                        <p class="desc">애경산업은 스파크 3kg 리필 제품에 사용되던
+                            포장재를 기존 복합재질(비닐류 OTHER)에서
+                            단일재질(비닐류 LDPE)로 변경함으로써
+                            재활용성은 높이고, 탄소배출량을 줄였습니다.
+                            연간 약 45만개의 스파크 3kg 리필 포장재가
+                            복합재질에서 단일재질로 변경될 것으로
+                            예상되며 이를 통해 약 1.7톤 이상의 탄소배출
+                            감축효과가 기대됩니다.
+                            또한 애경산업은 스마트 액체세제 브랜드 ‘리큐’
+                            (LiQ)의 리필 제품에 재활용 포장재
+                            (PIR-LLDPE)를 도입했습니다.
+                        </p>
+                    </div>
+                    <div class="hr cont02">
+                        <div class="img-wrap">
+                            <img src="./images/img_env06_02.png" alt="">
+                        </div>
+                        <p class="desc">밸런싱 라이프 뷰티 브랜드 ‘에프플로우’
+                            (FFLOW)의 ‘시카 세라마이드 수분크림’은
+                            동물성 성분을 배제한 ‘비건 처방’과 함께 환경을
+                            생각해 재활용 등급이 우수한 용기를 사용하고,
+                            삼림인증제도 ‘FSC인증’(Forest Stewardship
+                            Council)마크를 획득한 단상자 및 식물성 잉크인
+                            ‘소이잉크’를 사용해 피부뿐만 아니라 환경까지
+                            생각하는 클린뷰티를 실천하고 있습니다.<br><br>
+                            여성 바이오 브랜드 ‘치유비’(ChiuuB)는 ‘치유비
+                            여성청결제’를 출시하면서 소비 후 수거된
+                            플라스틱을 재활용한 ‘PCR PET’(Post-
+                            Consumer Recycled PET) 용기를 사용했으며,
+                            펌프캡부터 라벨까지 분리배출을 쉽게 할 수
+                            있도록 패키지를 설계했습니다.
+                        </p>
+                    </div>
+                    <div class="hr cont03">
+                        <div class="img-wrap">
+                            <img src="./images/img_env06_03.png" alt="">
+                        </div>
+                        <p class="desc">
+                            이러한 실천에 힘입어 애경산업은 지난해 9월
+                            환경부로부터 ‘자원순환 유공 환경부 장관 표창’을
+                            수상했으며 환경친화적 기업 경영과
+                            사업장폐기물 감량 및 순환이용 촉진을 통해
+                            자원순환사회 형성에 기여한 공을 인정받아
+                            자원순환 유공 환경부 장관 표창을 수상한 바
+                            있습니다.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 <!--//본문영역-->
