--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             </div>
             <div class="btn-scroll-down pc"><a href="javascript:;" onclick="$.fn.fullpage.moveTo('newsRoom', 1)" class="tk-arboria" onClick="scrollDown()"><img src="./images/scrollMotion.gif" alt="클릭시 다음페이지로 이동">SCROLL</a></div>
             <div class="btn-scroll-down mo"><a href="javascript:;" onclick="scrollDown()" class="tk-arboria" onClick="scrollDown()"><img src="./images/scrollMotion.gif" alt="클릭시 다음페이지로 이동">SCROLL</a></div>
-        </section>
+        </div>
+</section>
         <section class="section fp-auto-height-responsive news-room" data-anchor="newsRoom" id="section1">
             <div class="news-top">
                 <h2 class="tk-arboria">NEWSROOM</h2>
@@ -279,7 +280,8 @@
                     <!-- If we need navigation buttons -->
                 </div>
             </div>
-        </section>
+        </div>
+</section>
         <section class="section fp-auto-height-responsive esg" data-anchor="esg" id="section2">
             <div class="left-box">
                 <div class="caption">
@@ -315,7 +317,8 @@
                         공생의 가치를 실현하고 있습니다</p>
                 </a>
             </div>
-        </section>
+        </div>
+</section>
         <footer class="section fp-auto-height" data-anchor="footer"id="section3">
             <div class="info">
                 <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"></a></h1>
