--- a/list.html
+++ b/list.html
@@ -128,8 +128,22 @@
     </tr>
     <tr>
         <td>5</td>
-        <td>뉴스룸 > 주요 ESG활동</td>
+        <td>뉴스룸 > 주요 ESG활동 - 환경</td>
         <td><a href="/esg_main_activity.html">esg_main_activity.html</a></td>
+        <td>
+        </td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>뉴스룸 > 주요 ESG활동 - 사회</td>
+        <td><a href="/esg_main_activity_soc.html">esg_main_activity_soc.html</a></td>
+        <td>
+        </td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>뉴스룸 > 주요 ESG활동 - 지배구조</td>
+        <td><a href="/esg_main_activity_gov.html">esg_main_activity_gov.html</a></td>
         <td>
         </td>
     </tr>
