--- a/esg_management_goal.html
+++ b/esg_management_goal.html
@@ -132,8 +132,8 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li class="mo"><a href="javascript:;">ESG 경영 목표</a></li>
-                <li class="active"><a href="javascript:;">ESG 경영 목표</a></li>
+                <li class="mo"><a href="javascript:;">ESG 경영</a></li>
+                <li class="active"><a href="javascript:;">ESG 경영</a></li>
                 <li><a href="/esg_management_level.html">ESG 등급</a></li>
                 <li class="tow-nd"><a href="javascript:;">다양성과 포용성</a></li>
                 <li class="tow-nd"><a href="javascript:;">ESG 추진체계(조직)</a></li>
