--- a/esg_main_activity_gov.html
+++ b/esg_main_activity_gov.html
@@ -166,7 +166,7 @@
                     <p class="tit">애경그룹 사외이사 의장 선임 및
                         거버넌스 위원회 출범</p>
                     <div class="img-wrap">
-                        <img src="./images/img_soc01.png" alt="">
+                        <img src="./images/img_gov01.png" alt="">
                     </div>
                     <p class="desc">
                         AK홀딩스는 2021년 8월 그룹 내 최초로 이사회
