--- a/esg_main_activity_soc.html
+++ b/esg_main_activity_soc.html
@@ -160,29 +160,33 @@
             </ul>
         </div>
         <div class="cont-wrap">
-            <section>
+            <section class="soc01">
                 <div class="inner">
                     <p class="cate"><span>Social</span><span>01</span></p>
-                    <p class="tit">애경그룹 EHS 협의체 구축으로
-                        현실성 있는 ESG경영 실천</p>
-                    <div class="img-wrap">
-                        <img src="./images/img_soc01.png" alt="">
+                    <div class="cont01">
+                        <p class="tit">애경그룹 EHS 협의체 구축으로
+                            현실성 있는 ESG경영 실천</p>
+                        <div class="img-wrap">
+                            <img src="./images/img_soc01.png" alt="">
+                        </div>
+                        <p class="desc">
+                            애경산업과 애경케미칼은 지난해 안전환경보건
+                            (EHS) 협의체를 만들어 안전한 사업장 구축으로
+                            중대재해를 예방하는 등 현실성 있는 ESG경영을
+                            실천하고 있습니다.<br><br>
+                            애경그룹 내 주요 화학 계열사였던 애경유화,
+                            애경화학, AK켐텍이 애경케미칼로 합병되기 전인
+                            2021년 3월부터 주도적으로 협의체를 만들어
+                            상호존중의 원칙하에 매 분기 미팅을 개최해
+                            각 사 우수 사례와 아차사고(Near Miss: 작업자의
+                            부주의나 설비 결함 등으로 사고가 일어날
+                            뻔했으나 직접적인 사고로는 이어지지 않은 상황)
+                            사례 공유, 안전환경보건 법령과 동향 모니터링
+                            등을 통해 안전한 사업장 만들기와 상호역량
+                            강화를 도모하고 있습니다.
+                        </p>
                     </div>
                     <p class="desc">
-                        애경산업과 애경케미칼은 지난해 안전환경보건
-                        (EHS) 협의체를 만들어 안전한 사업장 구축으로
-                        중대재해를 예방하는 등 현실성 있는 ESG경영을
-                        실천하고 있습니다.<br><br>
-                        애경그룹 내 주요 화학 계열사였던 애경유화,
-                        애경화학, AK켐텍이 애경케미칼로 합병되기 전인
-                        2021년 3월부터 주도적으로 협의체를 만들어
-                        상호존중의 원칙하에 매 분기 미팅을 개최해
-                        각 사 우수 사례와 아차사고(Near Miss: 작업자의
-                        부주의나 설비 결함 등으로 사고가 일어날
-                        뻔했으나 직접적인 사고로는 이어지지 않은 상황)
-                        사례 공유, 안전환경보건 법령과 동향 모니터링
-                        등을 통해 안전한 사업장 만들기와 상호역량
-                        강화를 도모하고 있습니다.<br><br>
                         애경그룹은 안전환경보건 경영 강화를 위해 우선
                         안전환경보건 협의체를 주축으로 전 계열사의
                         안전환경보건 수준을 향상시키는데 집중하고
