--- a/ir_contact.html
+++ b/ir_contact.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_level.html">ESG 경영</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
                         </ul>
                         <ul>
@@ -146,7 +146,7 @@
     <div class="cont">
         <div class="contact-ir">
             <p class="desc">AK홀딩스 IR과 관련된 문의는<br>
-                아래 전화문의를 통해<br class="mo">
+                아래 이메일로 보내주시면<br class="mo">
                 성실히 답변해 드리겠습니다.</p>
             <div class="mail-address">
                 <div class="inner">
