--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_level.html">ESG 경영</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
                         </ul>
                         <ul>
@@ -132,8 +132,8 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li class="mo"><a href="javascript:;">CEO Message</a></li>
-                <li class="active"><a href="javascript:;">CEO Message</a></li>
+                <li class="mo"><a href="javascript:;">CEO 메시지</a></li>
+                <li class="active"><a href="javascript:;">CEO 메시지</a></li>
                 <li><a href="/introduce_ci.html">CI</a></li>
                 <li class="tow-nd"><a href="javascript:;">홀딩스 역할</a></li>
                 <li class="tow-nd"><a href="javascript:;">거버넌스 구조</a></li>
