--- a/introduce_ci.html
+++ b/introduce_ci.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_level.html">ESG 경영</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
                         </ul>
                         <ul>
@@ -133,7 +133,7 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="mo"><a href="javascript:;">CI</a></li>
-                <li><a href="/introduce_ceo.html">CEO Message</a></li>
+                <li><a href="/introduce_ceo.html">CEO 메시지</a></li>
                 <li class="active"><a href="javascript:;">CI</a></li>
             </ul>
         </div>
