--- a/introduce_history.html
+++ b/introduce_history.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_level.html">ESG 경영</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
                         </ul>
                         <ul>
@@ -438,7 +438,7 @@
                         </div>
                     </li>
                     <li>
-                        <span class="month">04</span>
+                        <span class="month">06</span>
                         <div class="desc">
                             <p>애경그룹 창립 60주년</p>
                         </div>
@@ -479,7 +479,7 @@
                         </div>
                     </li>
                     <li>
-                        <span class="month">09</span>
+                        <span class="month">04</span>
                         <div class="desc">
                             <p>AK플라자 원주점 오픈</p>
                         </div>
