--- a/investment_info_list.html
+++ b/investment_info_list.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_level.html">ESG 경영</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
                         </ul>
                         <ul>
