--- a/ir_bod.html
+++ b/ir_bod.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_level.html">ESG 경영</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
                         </ul>
                         <ul>
@@ -289,7 +289,7 @@
                         이외에는 이 규정이 정하는 바에 의한다.
                     </li>
                     <li>
-                        <p>제3조 (직무와 권한)</p>
+                        <p>제3조 (권한)</p>
                         <ul>
                             <li><em>①</em>이사회는 법령 또는 정관에 정하여진 사항,
                                 주주총회로부터 위임 받은 사항, 회사경영의 기본
