--- a/list.html
+++ b/list.html
@@ -61,7 +61,7 @@
     </tr>
     <tr>
         <td>1</td>
-        <td>그룹 소개 > 회사소개 > CEO Message</td>
+        <td>그룹 소개 > 회사소개 > CEO 메시지</td>
         <td><a href="/introduce_ceo.html">introduce_ceo.html</a></td>
         <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
