--- a/value_founded.html
+++ b/value_founded.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_level.html">ESG 경영</a></li>
                             <li><a href="/esg_management_level.html">ESG 등급</a></li>
                         </ul>
                         <ul>
@@ -170,7 +170,7 @@
                 <em class="tit">신뢰</em>
                 <p class="desc">애경 그룹은 구성원 및 파트너들과 끊임 없는<br class="mo">
                     소통으로 신뢰를 형성하여 누구나 믿을 수 있는<br class="mo">
-                    제품과 서비스를 제공 합니다.</p>
+                    제품과 서비스를 제공합니다.</p>
             </li>
             <li class="innovation">
                 <em class="tit">혁신</em>
