--- a/ir_governance.html
+++ b/ir_governance.html
@@ -134,7 +134,7 @@
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="mo"><a href="javascript:;">기업지배구조</a></li>
                 <li class="active"><a href="javascript:;">기업지배구조</a></li>
-                <li><a href="./ir_bod">이사회 현황</a></li>
+                <li><a href="./ir_bod.html">이사회 현황</a></li>
                 <li class="tow-nd"><a href="javascript:;">기업지배구조헌장</a></li>
             </ul>
         </div>
