--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -150,7 +150,13 @@
                         <!-- 06/15 업데이트 조회수 삭제 -->
                     </div>
                 </div>
-                <div class="bbs-view-content">AK플라자가 애경그룹과 함께 강원 산불 피해
+                <div class="bbs-view-content">
+                    <p style="text-align: center;">
+                        <span style="font-size:5.8em;">
+                            <strong>기준일 설정 및 주주명부 폐쇄 공고</strong>
+                        </span>
+                    </p>
+                    AK플라자가 애경그룹과 함께 강원 산불 피해
 지역 복구 지원에 나섰다.
 
 AK플라자는 애경그룹 지주회사인 AK홀딩스,
